Add paths holding custom ClassLoaders to extended reports
If Android Studio component is owning some custom ClassLoaders they can
be registered in memory_usage_reporting.textproto in
extended_report_threshold_bytes field. In this case extended reports
will contain retaining paths of all the objects loaded by the custom
loader, but refered from a regular loader.

Bug: 280408311
Test: HeapAnalyzerTest#testExtendedReportCustomClassLoaders
Change-Id: I4666af6c08960cb434b58191e38c158397156165

GitOrigin-RevId: 232e8f976e72a11552ce47147bd1bb4c89ff10a2